<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/default_margin"

            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registrationTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="@dimen/default_padding" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="@dimen/default_padding" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userEmailEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="@dimen/default_padding" />

        <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="@dimen/default_padding" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordAgainEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingStart="@dimen/default_padding" />

        <Spinner
            android:id="@+id/phoneSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:contentDescription="Telefon típúsa"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress|textMultiLine"
            android:maxLines="3"
            android:minHeight="48dp"
            android:paddingStart="@dimen/default_padding" />

        <RadioGroup
            android:id="@+id/accountTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressEditText"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin">

            <RadioButton
                android:id="@+id/buyerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vásárló" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Eladó" />

        </RadioGroup>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountTypeGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/registration" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:onClick="cancel"
                android:text="@string/cancel" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>